--- a/quarkus-products/src/main/resources/application.properties
+++ b/quarkus-products/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-quarkus.rest-client.discounts-api.url=http://localhost:8080# 
+quarkus.rest-client.discounts-api.url=http://localhost:8080
 quarkus.rest-client.discounts-api.scope=javax.inject.Singleton #
