--- a/ci/pipelinerun-discounts.yaml
+++ b/ci/pipelinerun-discounts.yaml
@@ -11,9 +11,9 @@ spec:
   - name: SOURCE_GIT_CONTEXT_DIR
     value: quarkus-discounts
   - name: TAG
-    value: latest
+    value: v1.1.1
   - name: SOURCE_GIT_REVISION
-    value: v1.1.0
+    value: main
   workspaces:
   - name: dockerconfig
     secret:
