--- a/quarkus-discounts/pom.xml
+++ b/quarkus-discounts/pom.xml
@@ -33,6 +33,10 @@
       <artifactId>quarkus-resteasy-jackson</artifactId>
     </dependency>
     <dependency>
+	    <groupId>io.quarkus</groupId>
+	    <artifactId>quarkus-resteasy-qute</artifactId>
+	</dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-smallrye-openapi</artifactId>
   </dependency>
