--- a/ci/application-pipeline-ci.yaml
+++ b/ci/application-pipeline-ci.yaml
@@ -2,10 +2,11 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: pipelines-ci
+  namespace: openshift-gitops
 spec:
   destination:
     name: ''
-    namespace: blue-green-gitops
+    namespace: openshift-gitops
     server: 'https://kubernetes.default.svc'
   source:
     path: ci/pipeline
