--- a/ci/pipeline/pv-discounts.yaml
+++ b/ci/pipeline/pv-discounts.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: workspace-pvc-discounts
+  namespace: gitops
 spec:
   accessModes:
   - ReadWriteOnce
