--- a/ci/pipeline/trigger-lisener-offers.yaml
+++ b/ci/pipeline/trigger-lisener-offers.yaml
@@ -11,6 +11,7 @@ kind: EventListener
 metadata:
   name: discounts-listener
 spec:
+  serviceAccountName: pipeline
   triggers:
   - name: discounts
     triggerRef: discounts-trigger
