--- a/ci/application-pipeline-ci.yaml
+++ b/ci/application-pipeline-ci.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   destination:
     name: ''
-    namespace: openshift-gitops
+    namespace: pipeline-ci
     server: 'https://kubernetes.default.svc'
   source:
     path: ci/pipeline
