--- a/ci/pipeline/pipeline.yaml
+++ b/ci/pipeline/pipeline.yaml
@@ -35,9 +35,10 @@ spec:
 
   workspaces:
   - name: workspace-source
+  - name: maven-settings  
 
   tasks:
-  - name: fetch-repository
+  - name: git-clone
     params:
       - name: URL
         value: $(params.SOURCE_GIT_URL)
@@ -45,8 +46,6 @@ spec:
         value: $(params.SOURCE_GIT_REVISION)
       - name: DELETE_EXISTING
         value: 'true'
-      # - name: SSL_VERIFY
-      #   value: $(params.GIT_SSL_VERIFY)
     taskRef:
       params:
         - name: name
@@ -57,6 +56,22 @@ spec:
     workspaces:
       - name: output
         workspace: workspace-source
+  
+  - name: package
+    runAfter:
+      - git-clone
+    taskRef:
+      params:
+        - name: name
+          value: maven
+        - name: namespace
+          value: openshift-pipelines
+      resolver: cluster      
+    workspaces:
+      - name: source
+        workspace: source-folder
+      - name: maven-settings
+        workspace: maven-settings
 
   - name: build-sign-image
     params:
@@ -67,7 +82,7 @@ spec:
       - name: DOCKERFILE
         value: ./$(params.DOCKERFILE)
     runAfter:
-      - fetch-repository
+      - package
     taskRef:
       resolver: cluster
       params:
