--- a/ci/pipeline/trigger-template-offers.yaml
+++ b/ci/pipeline/trigger-template-offers.yaml
@@ -29,4 +29,13 @@ spec:
               requests:
                 storage: 1Gi
             volumeMode: Filesystem
+      - name: maven-settings
+        volumeClaimTemplate:
+          spec:
+            accessModes:
+              - ReadWriteOnce
+            resources:
+              requests:
+                storage: 1Gi
+            volumeMode: Filesystem      
 
