--- a/ci/pipeline/trigger-template-offers.yaml
+++ b/ci/pipeline/trigger-template-offers.yaml
@@ -29,7 +29,7 @@ spec:
               requests:
                 storage: 1Gi
             volumeMode: Filesystem
-      - name: maven-settings
+      - name: maven_settings
         volumeClaimTemplate:
           spec:
             accessModes:
