--- a/ci/pipeline/trigger-binding-offers.yaml
+++ b/ci/pipeline/trigger-binding-offers.yaml
@@ -7,4 +7,4 @@ spec:
   - name: git-repo-url
     value: $(body.repository.clone_url)
   - name: git-revision
-    value: $(body.after)
+    value: $(body.head_commit.id)
