--- a/ci/pipeline/trigger-template-offers.yaml
+++ b/ci/pipeline/trigger-template-offers.yaml
@@ -11,7 +11,7 @@ spec:
   - apiVersion: tekton.dev/v1beta1
     kind: PipelineRun
     metadata:
-      generateName: pipeline-ci-$(tt.params.git-repo-name)
+      generateName: $(tt.params.git-repo-name)
     spec:
       pipelineRef:
         name: build-quarkus-application
